Library/AXL(Library)/Visual Basic(Net)/AXD.vb

Option Strict Off
Option Explicit On
Module AXD

    '*****************************************************************************
    '/****************************************************************************
    '*****************************************************************************
    '**
    '** File Name
    '** ----------
    '**
    '** AXD.VB
    '**
    '** COPYRIGHT (c) AJINEXTEK Co., LTD
    '**
    '*****************************************************************************
    '*****************************************************************************
    '**
    '** Description
    '** -----------
    '** Ajinextek Digital Library Header File
    '** 
    '**
    '*****************************************************************************
    '*****************************************************************************
    '**
    '** Source Change Indices
    '** ---------------------
    '** 
    '** (None)
    '**
    '**
    '*****************************************************************************
    '*****************************************************************************
    '**
    '** Website
    '** ---------------------
    '**
    '** http://www.ajinextek.com
    '**
    '*****************************************************************************
    '*****************************************************************************
    '*/
    '


'========== Board and module information =================================================================================

' Verify if DIO module exists
Public Declare Function AxdInfoIsDIOModule Lib "AXL.dll" (ByRef upStatus As Integer) As Integer


' Verify DIO in/output module number
Public Declare Function AxdInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef lpModuleNo As Integer) As Integer


' Verify the number of DIO in/output module
Public Declare Function AxdInfoGetModuleCount Lib "AXL.dll" (ByRef lpModuleCount As Integer) As Integer


' Verify the number of input contacts of specified module
Public Declare Function AxdInfoGetInputCount Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpCount As Integer) As Integer


' Verify the number of output contacts of specified module
Public Declare Function AxdInfoGetOutputCount Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpCount As Integer) As Integer


' Verify the base board number, module position and module ID with specified module number
Public Declare Function AxdInfoGetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpBoardNo As Integer, ByRef lpModulePos As Integer, ByRef upModuleID As Integer) As Integer


' Verify specified module board : Sub ID, module name, module description
'===============================================/
' support product : EtherCAT
' upModuleSubID   : EtherCAT SubID(for distinguish between EtherCAT modules)
' szModuleName         : model name of module(50 Bytes)
' szModuleDescription  : description of module(80 Bytes)
'======================================================'
Public Declare Function AxdInfoGetModuleEx Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upModuleSubID As Integer, ByVal szModuleName As String, ByVal szModuleDescription As String) As Integer

' Verify Module status of specified module board
Public Declare Function AxdInfoGetModuleStatus Lib "AXL.dll" (ByVal lModuleNo As Integer) As Integer

'========== Verification group for input interrupt setting =================================================================================
' Use window message, callback API or event method in order to get interrupt message into specified module
'========= Interrupt-related function ======================================================================================
'The callback function method has the advantage that the event can be notified very quickly because the callback function is called immediately at the time of the occurrence of the event.
'But, The main process is stalled until the callback function is completely terminated.
'In other words, Care must be taken when there is work load in the callback function.
'The event method is a method of continuously detecting and processing the occurrence of an interrupt by using a thread.
'The event method has the disadvantage that system resources are occupied by thread, but it has the advantage that interrupts can be detected and processed the fastest.
'This method is not commonly used. but it is used when quick interrupt handling is main concern.
'The event method uses a specific thread to monitor the occurrence of an event, and it works independently of the main process.
'So, This is the recommended method because it enables the most efficient use of resources in a multiprocessor system.
'Use a Window message or callback function to receive interrupt message.
'(Message handle, Message ID, Callback function, Interrupt event)
'    hWnd        : Used to receive window handles and window messages. If not, enter NULL.
'    uMessage    : Massage of window handle. To not use this or use the default value, enter 0.
'    proc        : Pointer of the function to be called when an interrupt occurs. To not use this, enter NULL.
'    pEvent      : Event handling when using event method.
' Ex)
' AxdiInterruptSetModule(0, Null, 0, AxtInterruptProc, NULL);
' void __stdcall AxtInterruptProc(long lActiveNo, DWORD uFlag){
'     ... ;
' }
Public Declare Function AxdiInterruptSetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal hWnd As Integer, ByVal uMessage As Integer, ByVal pProc As Integer, ByRef pEvent As Integer) As Integer


' Set whether to use interrupt of specified module
'======================================================'
' uUse       : DISABLE(0)   ' Interrupt Disable
'            : ENABLE(1)    ' Interrupt Enable
'======================================================'
Public Declare Function AxdiInterruptSetModuleEnable Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal uUse As Integer) As Integer


' Verify whether to use interrupt of specified module
'======================================================'
' *upUse     : DISABLE(0)   ' Interrupt Disable
'            : ENABLE(1)    ' Interrupt Enable
'======================================================'
Public Declare Function AxdiInterruptGetModuleEnable Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upUse As Integer) As Integer


' Verify the position interrupt occurred
Public Declare Function AxdiInterruptRead Lib "AXL.dll" (ByRef lpModuleNo As Integer, ByRef upFlag As Integer) As Integer


'========== Input interrupt rising / Verification group for setting of interrupt occurrence in falling edge =================================================================================

' Set the rising or falling edge value by bit unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' uValue     : DISABLE(0)
'            : ENABLE(1)
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeSetBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByVal uValue As Integer) As Integer


' Set the rising or falling edge value by byte unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' uValue     : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeSetByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByVal uValue As Integer) As Integer


' Set the rising or falling edge value by word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' uValue     : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeSetWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByVal uValue As Integer) As Integer


' Set the rising or falling edge value by double word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' uValue     : 0x00 ~ 0x0FFFFFFFF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeSetDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByVal uValue As Integer) As Integer


' Verify the rising or falling edge value by bit unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' *upValue   : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeGetBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByRef upValue As Integer) As Integer


' Verify the rising or falling edge value by byte unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' *upValue   : 0x00 ~ 0x0FF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeGetByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByRef upValue As Integer) As Integer


' Verify the rising or falling edge value by word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' *upValue   : 0x00 ~ 0x0FFFF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeGetWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByRef upValue As Integer) As Integer

